2005-12-11  Stephen Deasey  <sdeasey@users.sf.net>

	* nsd/tclvar.c: Untabify and reformat.

2005-12-10  Stephen Deasey  <sdeasey@users.sf.net>

	* nsd/httptime.c: Untabify and reformat.
	* tests/ns_httptime.test: Add tests for ns_parsehttptime.

	* nsd/httptime.c:
	* tests/hs_httptime.test: Use snprintf to format the date to ensure the
	English week and month names are always used, no matter which
	locale is in effect. (Bug# 1340755)

	* include/ns.h:
	* nsd/nsd.h:
	* nsd/fastpath.c:
	* nsd/tclrequest.c:
	* nsd/tclcmds.c:
	* nsd/server.c:
	* nsd/proc.c:
	* tests/ns_register_proc.test: Add new Tcl command ns_register_fastpath
	which re-register the original fastpath proc for static file serving,
	for the specified method and URL.  This allows e.g. a Tcl proc to
	be registered as the default handler for the URL / and then
	override this with the fastpath proc for /images.  The fastpath
	proc invokes no Tcl and therefore does not allocate an interp.
	Non-Tcl using threads can be segregated using the conn pool
	mechanism.
	(RFE: http://sf.net/tracker/index.php?func=detail&aid=1012770&group_id=3152&atid=353152)

2005-12-05  Stephen Deasey  <sd@groks.org>

	* include/ns.h:
	* nsd/op.c: Add new function Ns_UnRegisterProcEx which
	allows all urlspace flags to be set.
	* nsd/tclrequest.c: Fix bug where noinherit procs were not being
	deleted. Add new -recurse flag to ns_unregister_proc which deletes
	all registered procs below the given URL.
	* tests/ns_register_proc.test: Exercise the ns_register_proc API.

2005-12-03  Stephen Deasey  <sdeasey@users.sf.net>

	* tests/ns_info.test: Add new sub-commands to failing ns_info test.

2005-11-12  Vlad Seryakov  <seryakov@users.sf.net>
	
	* nsd.info.c: Added ns_info started and 
	ns_info shutdownpending commands

2005-11-12  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd.conn.c: New Ns_ConnSockPtr function
	* nsd/info.c: Fixed sockcallbacks as unrecognosed error
	* nssock/nssock.c: